--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,9 +12,11 @@
   <nav class="navbar bg-primary" data-bs-theme="dark">
     <div class="container">
       <a href="/" class="navbar-brand">CrowdfundMe 2023</a>
+      {{> log-in-out}}
     </div>
   </nav>
 
   {{{body}}}
+  <script src="/js/logout.js"></script>
 </body>
 </html>
