--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,4 @@
 <div class="container">
   <h1>Welcome to CrowdfundMe!</h1>
-  <ul>
-    {{#each projects}}
-      <li>
-        <a href="/projects/{{id}}">
-          {{name}}
-        </a>
-      </li>
-    {{/each}}
-  </ul>
+  {{>project-list}}
 </div>
